update versions-maven-plugin version for maven 4 compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,7 @@
 		<ikm-reasoner.version>0.39.6</ikm-reasoner.version>
 		<owlapi.version>4.8.7</owlapi.version>
         <maven.github-flow.version>1.21.1-r11</maven.github-flow.version>
+        <maven.versions.plugin>2.19.1</maven.versions.plugin>
     </properties>
 
     <!-- All Dependencies and versions used in this project are pre-defined here for use in modules -->
