--- a/language-extensions/pom.xml
+++ b/language-extensions/pom.xml
@@ -2,10 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
     <modelVersion>4.1.0</modelVersion>
 
-    <parent>
-        <groupId>dev.ikm.tinkar</groupId>
-        <artifactId>tinkar-core</artifactId>
-    </parent>
+    <parent/>
 
     <artifactId>language-extensions</artifactId>
     <packaging>pom</packaging>
