--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.69.0</version>
+        <version>1.73.0</version>
     </parent>
 
     <groupId>dev.ikm.tinkar</groupId>
@@ -43,20 +43,20 @@
         </developer>
     </developers>
 
-    <modules>
-        <module>collection</module>
-        <module>common</module>
-        <module>component</module>
-        <module>entity</module>
-        <module>language-extensions</module>
-        <module>terms</module>
-        <module>provider</module>
-        <module>reasoner</module>
-        <module>integration</module>
-        <module>aggregator</module>
-        <module>events</module>
-        <module>tinkar-bom</module>
-    </modules>
+    <subprojects>
+        <subproject>collection</subproject>
+        <subproject>common</subproject>
+        <subproject>component</subproject>
+        <subproject>entity</subproject>
+        <subproject>language-extensions</subproject>
+        <subproject>terms</subproject>
+        <subproject>provider</subproject>
+        <subproject>reasoner</subproject>
+        <subproject>integration</subproject>
+        <subproject>aggregator</subproject>
+        <subproject>events</subproject>
+        <subproject>tinkar-bom</subproject>
+    </subprojects>
 
     <scm>
         <url>http://www.github.com/ikmdev/tinkar-core</url>
