--- a/provider/data-spinedarray-provider/pom.xml
+++ b/provider/data-spinedarray-provider/pom.xml
@@ -3,10 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
     <modelVersion>4.1.0</modelVersion>
 
-    <parent>
-        <groupId>dev.ikm.tinkar</groupId>
-        <artifactId>provider</artifactId>
-    </parent>
+    <parent/>
 
     <artifactId>data-spinedarray-provider</artifactId>
     <packaging>jar</packaging>
