implement changesetwriterservicefactory and update test configurations

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <testng.version>7.4.0</testng.version>
         <snomedct-data.version>2023.09.01</snomedct-data.version>
-        <tinkar-starter-data.version>1.1.2</tinkar-starter-data.version>
+        <tinkar-starter-data.version>20251009</tinkar-starter-data.version>
         <tinkar-example-data.version>1.2.0+1.2.2</tinkar-example-data.version>
         <protobuf-java.version>4.30.2-r3</protobuf-java.version>
         <sonar.skip>false</sonar.skip>
