--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -13,7 +13,14 @@
         <skip.unit.tests>false</skip.unit.tests>
         <skip.integration.tests>false</skip.integration.tests>
         <tinkar-composer.version>1.12.0</tinkar-composer.version>
-        <failsafeArgLine>--enable-preview</failsafeArgLine>
+        <failsafeArgLine>
+            --enable-preview
+            -Xmx12G
+        </failsafeArgLine>
+        <surefireArgLine>
+            --enable-preview
+            -Xmx12G
+        </surefireArgLine>
     </properties>
 
     <dependencyManagement>
@@ -104,6 +111,17 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>search-provider</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>changeset-writer-provider</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>terms</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-api</artifactId>
@@ -118,6 +136,16 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
         </dependency>
 
         <dependency>
@@ -152,24 +180,23 @@
         </dependency>
 
         <dependency>
-            <groupId>dev.ikm.tinkar</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>reasoner-elk-owl</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>dev.ikm.tinkar</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>reasoner-elk-snomed</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>dev.ikm.tinkar</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>reasoner-hybrid</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>dev.ikm.tinkar</groupId>
-            <artifactId>changeset-writer-provider</artifactId>
-            <scope>test</scope>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-engine</artifactId>
         </dependency>
     </dependencies>
 
@@ -179,7 +206,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>  <!-- CRITICAL: Fresh JVM per test class -->
                 </configuration>
