--- a/tinkar-bom/pom.xml
+++ b/tinkar-bom/pom.xml
@@ -11,7 +11,10 @@
     <description>Centralized dependency versions for Tinkar subprojects</description>
 
     <properties>
+        <junit.version>6.0.0</junit.version>
         <log4j.version>3.0.0-beta3</log4j.version>
+        <log4j-api.version>3.0.0-beta2</log4j-api.version>
+        <log4j-slf4j2-impl.version>3.0.0-beta2</log4j-slf4j2-impl.version>
         <slf4j.version>2.0.17</slf4j.version>
     </properties>
 
@@ -21,7 +24,7 @@
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>6.0.0</version>
+                <version>${junit.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -47,7 +50,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>3.0.0-beta2</version>
+            <version>${log4j-api.version}</version>
             <!-- TODO: There is no 3.0.0-beta3 for log4j-api -->
         </dependency>
         <dependency>
@@ -63,7 +66,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j2-impl</artifactId>
-            <version>3.0.0-beta2</version>
+            <version>${log4j-slf4j2-impl.version}</version>
             <!-- TODO: There is no 3.0.0-beta3 for log4j-slf4j2-impl -->
         </dependency>
     </dependencies>
