--- a/provider/data-ephemeral-provider/pom.xml
+++ b/provider/data-ephemeral-provider/pom.xml
@@ -9,6 +9,10 @@
 
     <name>TINKAR Provider Data - Ephemeral</name>
 
+    <properties>
+        <compiler.args>--enable-preview</compiler.args>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
