--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -43,6 +43,11 @@
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-suggest</artifactId>
+        </dependency>
      </dependencies>
 
     <build>
