Revert "revert all progress commits 108f222a..1b7bfadf"
This reverts commit acb244da156ffc113f9a62a22e62edcb82c01715.

# Conflicts:
#	integration/src/test/java/dev/ikm/tinkar/integration/reasoner/ReasonerIT.java
#	integration/src/test/java/dev/ikm/tinkar/integration/search/SearcherIT.java
#	pom.xml
#	reasoner/reasoner-elk-snomed-test/src/test/java/dev/ikm/tinkar/reasoner/elksnomed/test2/ElkSnomedIncrementalTestIT.java
#	reasoner/reasoner-elk-snomed/src/main/java/dev/ikm/tinkar/reasoner/elksnomed/ElkSnomedDataBuilder.java
#	reasoner/reasoner-elk-snomed/src/main/java/dev/ikm/tinkar/reasoner/elksnomed/ElkSnomedReasonerService.java
#	reasoner/reasoner-hybrid/src/main/java/dev/ikm/tinkar/reasoner/hybrid/HybridReasonerService.java
#	reasoner/reasoner-service/src/main/java/dev/ikm/tinkar/reasoner/service/InferredResultsWriter.java

--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -46,7 +46,7 @@
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed-owl-el</artifactId>
 			<!-- TODO This should be test scoped, but the module system? -->
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.ikm.elk</groupId>
