--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
         </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
         <sonar.language>java</sonar.language>
+        <maven.sonarqube.version>5.5.0.6356</maven.sonarqube.version>
         <susel.version>0.1.2</susel.version>
         <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
         <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
