refactor: integrate ServiceLifecycleManager with data provider selection
- Add ServiceLifecycleManager integration to PrimitiveData startup/shutdown
- Implement ProviderController.serviceClasses() for service discovery
- Migrate SearchProvider to lifecycle-managed service in INDEXING phase
- Add ServiceLifecyclePhase.CONFIGURATION for user selections
- Implement SearchService interface for decoupled search functionality
- Update all data providers to use ProviderController pattern
- Add StableValue pattern for lazy service initialization
- Remove direct Indexer/Searcher instantiation from data providers

Changes enable unified service discovery and lifecycle management across all
providers while maintaining backward compatibility with legacy controller API.

--- a/pom.xml
+++ b/pom.xml
@@ -560,7 +560,9 @@
                     <version>${maven.compiler-plugin.version}</version>
                     <configuration>
                         <release>${java.version}</release>
-                        <compilerArgs>${compiler.args}</compilerArgs>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
                     </configuration>
                     <dependencies>
                         <dependency>
