--- a/pom.xml
+++ b/pom.xml
@@ -592,6 +592,17 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>${maven.assembly.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <configuration>
+                        <!-- Exclude files using JEP 447 (statements before super/this) - unsupported by Checkstyle parser -->
+                        <!-- @SuppressWarnings is ineffective because Checkstyle fails during parsing, before annotations are processed -->
+                        <excludes>
+                            **/SearchProvider.java
+                        </excludes>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
